--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Project\\": "vendor\\project\\php-classes\\src"
+            "Rootdir\\": "vendor\\project\\php-classes\\src"
         }
     }
 }
