--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost/E-commerce",
+            "url": "http://www.atanael.com.br",
             "webRoot": "${workspaceFolder}"
         }
     ]
